bug 1193541 - Revert Bug 1191253 - Start the Link Monitor r=backout