netwerk/system/linux/nsNotifyAddrListener_Linux.cpp
@@ -314,7 +314,7 @@ nsNotifyAddrListener::Init(void)
     Preferences::AddBoolVarCache(&mAllowChangedEvent,
                                  NETWORK_NOTIFY_CHANGED_PREF, true);
 
-    rv = NS_NewNamedThread("Link Monitor", getter_AddRefs(mThread), this);
+    rv = NS_NewNamedThread("Link Monitor", getter_AddRefs(mThread));
     NS_ENSURE_SUCCESS(rv, rv);
 
 #ifdef MOZ_NUWA_PROCESS
